# cppbabel

./: .gitignore  CMakeLists.txt  README.md  c++.md  doc.md  main.cpp  package.json  readme.md
__test__/: CMakeLists.txt  test1.cpp
__test__/babel-parser/: util_utf8.cpp
__test__/babel-types/: ast.cpp  reflect.cpp  rttr.cpp  utils.cpp
__test__/base/: any_dict.cpp  class.cpp  const.cpp  copy_ctor.cpp  enum.cpp  friend_function.cpp  func.cpp  inline_function.cpp  operator.cpp  optional.cpp  static.cpp  string.cpp  string_enum.cpp  struct.cpp  union.cpp  vector.cpp
__test__/utils/: struct.h
__test_compiler__/: readme.md  star-dump.txt  star-so-dump.txt  sun-dump.txt  zeus
__test_compiler__/src/: earth.cpp  earth.h  hello.cpp  moon.cpp  moon.h  sun.cpp  sun.h  zeus.cpp
libs/rttr/: CMakeLists.txt
libs/rttr/CMake/: 3rd_party_libs.cmake  config.cmake  utility.cmake
libs/rttr/doc/: CMakeLists.txt
libs/rttr/src/examples/: CMakeLists.txt
libs/rttr/src/examples/json_serialization/: CMakeLists.txt  from_json.cpp
libs/rttr/src/examples/library_loading/library_loader_example/: CMakeLists.txt
libs/rttr/src/examples/library_loading/plugin_example/: CMakeLists.txt
libs/rttr/src/unit_tests/: CMakeLists.txt  pch.h  test_classes.h  unit_tests.cmake
libs/rttr/src/unit_tests/constructor/: constructor_default_arg_test.cpp
libs/rttr/src/unit_tests/instance/: instance_test.cpp
libs/rttr/src/unit_tests/method/: method_default_arg_test.cpp
libs/rttr/src/unit_tests/misc/: library_test.cpp
libs/rttr/src/unit_tests/plugin/: CMakeLists.txt  test_class_plugin.cpp
libs/rttr/src/unit_tests/property/: property_class_inheritance.cpp  property_member_object.cpp
libs/rttr/src/unit_tests/type/: test_type.cpp
libs/rttr/src/unit_tests/variant/: variant_conv_test.cpp
libs/rttr/src/unit_tests/variant_sequential_view/: variant_sequential_view_test.cpp
libs/utfcpp/utf8cpp.xcodeproj/: project.pbxproj
scripts/: build.sh  test_filter.sh
